--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,7 @@ h3 {
   transform: scale(1.2);
   cursor: pointer;
 }
+
+.top-shadow {
+  box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1), 0 -2px 4px -1px rgba(0, 0, 0, 0.06);
+}
